# ss-Raman-GUI

./: .gitignore  CMakeLists.txt  README.md
css/: test.css
generators/: CMakeLists.txt  pn_code_generator.c
glade/: appLayout_V1.glade  appLayout_V1.glade~  appLayout_Vtest.glade  appLayout_Vtest.glade~  test.glade
include/app/: acquire_data.h  data_output.h  fft_functions.h  measurement_params.h  pn_code.h  serial_pwm.h  spectrometer_functions.h  waveform_gen.h
serial_pwm/arduino_code/serial_pwm_control/: serial_pwm_control.ino
src/: acquire_data.c  data_output.c  fft_functions.c  main.c  pn_code_generator.c  serial_pwm.c  spectrometer_functions.c  waveform_gen.c  waveform_test_program.c
